--- a/Density_figure/Density_figure.csproj
+++ b/Density_figure/Density_figure.csproj
@@ -122,6 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataToFile.cs" />
+    <Compile Include="FileInfoSorter.cs" />
     <Compile Include="FindIceBlock.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
