--- a/Density_figure/Density_figure.csproj
+++ b/Density_figure/Density_figure.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
@@ -161,6 +162,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ice.ico" />
+    <None Include="Resources\PRIC_logo.png" />
+    <None Include="Resources\NFMC_logo.png" />
+    <None Include="Resources\dlut_logo.png" />
+    <None Include="Resources\03_国家海洋环境预报中心1.png" />
+    <None Include="Resources\02_中国极地研究中心.png" />
+    <None Include="Resources\01_DUT 校徽1.PNG" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
